[package]
name = "rust-crypto-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <youremail@example.com>"]
description = "A secure and minimal cryptocurrency wallet implemented in Rust."
license = "MIT"
repository = "https://github.com/yourusername/rust-crypto-wallet"
readme = "README.md"

[dependencies]
secp256k1 = "0.28"
rand = "0.8"
sha2 = "0.10"
ripemd160 = "0.10"
base58 = "0.2"
hex = "0.4"
